# AetherShell

./: README.md  install.sh  lib.md  package_all.sh  replace_vaxp.sh  uninstall.sh
AetherDock/: AetherDock  README.md  style.css
AetherDock/include/ui/: globals.h
AetherDock/src/logic/: app_manager.c
AetherDock/src/ui/: AetherDock.c  dock_config.c  dock_ui.c  globals.c
aether-recorder/: README.md  meson.build  meson_options.txt
aether-recorder/completions/: aether-recorder.fish
aether-recorder/manpage/: aether-recorder.1
aether-recorder/src/: frame-writer.cpp  gui.cpp  main.cpp  pipewire.cpp  pulse.cpp  settings.cpp  settings.hpp  tray-sni.cpp  tray-sni.hpp
aetheridle/: LICENSE  README.md  aetheridle.1.scd  log.h  main.c  meson.build
aetheridle/.builds/: alpine.yml  archlinux.yml
aetheridle/completions/: meson.build
aetheridle/completions/bash/: aetheridle
aetherlock/: .build.yml  .editorconfig  README.md  aetherlock.1.scd  comm.c  log.c  loop.c  main.c  meson.build  pam.c  password-buffer.c  password.c  render.c  seat.c
aetherlock/completions/: meson.build
aetherlock/completions/bash/: aetherlock
aetherlock/include/: aetherlock.h  background-image.h  cairo.h  comm.h  log.h  loop.h  password-buffer.h  pool-buffer.h  power_actions.h  seat.h  sysinfo.h  sysstats.h  unicode.h  vaxp_config.h  vaxp_notifications.h
aetherlock/pam/: aetherlock
aetherlock/src/: background-image.c  main.c  pool-buffer.c  power_actions.c  render.c  shadow.c  sysinfo.c  sysstats.c  vaxp_config.c  vaxp_notifications.c  venom_notifications.c
auth/: README.md  auth  install.sh
auth/include/: auth_ui.h  config.h
auth/src/: auth.c  auth_ui.c  config.c
basilisk/: Makefile  basilisk  project_analysis.md  vaxp-ai-prototype.html
basilisk/include/: ai_chat.h  basilisk.h  basilisk_window.h  commands.h  search.h  window.h
basilisk/src/: ai_chat.c  basilisk_window.c  commands.c  main.c  search.c  window.c
basilisk/src/core/: ai_ctrl.c
basilisk/src/ui/: view_ai.c
desktop/: Makefile  desktop  install_widgets.sh  meson.build  test_leak.sh  vaxp-setbg
desktop/include/: desktop_config.h  desktop_window.h  selection.h  video_wallpaper.h  wallpaper.h  widgets_manager.h
desktop/src/: desktop.c  desktop_config.c  icons.c  menu.c  selection.c  vaxp-setbg.c  video_wallpaper.c  wallpaper.c  widgets_manager.c
desktop/src/widgets/: date_widget.c  mpris-player.c
launcher/: README.md  meson.build
launcher/data/style/: launcher.css
launcher/src/: main.c
launcher/src/core/: app_entry.c  app_entry.h  desktop_reader.c  icon_loader.c
launcher/src/ui/: app_grid.c  app_grid.h  app_icon.c  app_icon.h  launcher_window.c  launcher_window.h  search_bar.c  search_bar.h  uninstall_dialog.c  uninstall_dialog.h
osd-notify/: osd-notify  tests_readme.md
osd-notify/include/: notify.h  notify_ui.h  osd.h  osd_logic.h  osd_logic_audio.h  osd_logic_brightness.h  osd_logic_draw.h  osd_logic_keyboard.h  osd_logic_state.h  osd_protocols.h  osd_protocols_x11.h  osd_sound.h  osd_udev.h  osd_ui.h
osd-notify/src/: aether-ipc-v2-client-protocol.c  config.c  config.h  main.c  notify.c  notify_ui.c  osd_logic_audio.c  osd_logic_brightness.c  osd_logic_draw.c  osd_protocols.c  osd_sound.c  osd_udev.c  osd_ui.c
panel/: Makefile  a.out  launcher.c  net-speed.c  panel  panel-plugin-api.h  style.css  test_width.c
panel/Additional plugin/: launcher.c
panel/config/: panel.json
panel/designer/: aether-panel-designer  config_io.c  config_io.h  main.c
panel/designer/ui/: app.js  index.html  style.css
panel/include/: aether-ipc-unstable-v2-client-protocol.h  airplane_mode.h  battery_backend.h  bluetooth_manager.h  builtin_plugins.h  compositor_backend.h  css_provider.h  kb_indicator_xorg.h  layout_builder.h  network_actions.h  plugin_engine.h  sidebar_backend.h  sni_backend.h  vaxp_notifications.h  venom_notifications.h  window_backend.h  workspaces_xorg.h
panel/src/: app_menu.c  battery_indicator.c  bluetooth_manager.c  bt_indicator.c  builtin_plugins.c  compositor_backend.c  control_center_ui.c  css_provider.c  layout_builder.c  logind.c  mic_indicator.c  notifications_ui.c  panel.c  plugin_engine.c  power_actions.c  sidebar.c  vaxp_notifications.c  venom_notifications.c  volume_indicator.c  wifi_indicator.c  window_backend.c  workspaces.c
panel/src/logic/: airplane_mode.c  battery_backend.c  compositor_backend.c  kb_indicator_xorg.c  network_actions.c  sidebar_backend.c  sni_backend.c  workspaces_xorg.c
panel/src/ui/: battery_indicator.c  control_center_ui.c  notifications_indicator.c  panel.c  sidebar.c  sni_tray.c
pkg_build/aether-recorder_pkg/DEBIAN/: control
shell/AetherCore/: AetherCore-plugin-api.h  launcher.c  net-speed.c  test_designer.js
shell/AetherCore/config/: AetherCore.json
shell/AetherCore/designer/: config_io.c  config_io.h  main.c
shell/AetherCore/include/: AetherCore-plugin-api.h  bt_indicator.h  builtin_plugins.h  compositor_backend.h  css_provider.h  layout_builder.h  plugin_engine.h  volume_indicator.h  window_backend.h
shell/AetherCore/src/: battery_indicator.c  (+15 more)
shell/AetherDock/: panel-plugin-api.h
vaxp-background/: meson.build  vaxp-background
vaxp-background/include/: desktop_config.h
vaxp-background/src/: main.c  vaxp-setbg.c  video_wallpaper.c  wallpaper.c
venom-panel/: Makefile  panel.conf  style.css  venom-panel  venom-panel-settings
venom-panel/include/: aether-ipc-v1-client-protocol.h  brightness-manager.h  cc-audio.h  cc-bluetooth.h  cc-brightness.h  cc-dnd.h  cc-ethernet.h  cc-mpris.h  cc-network.h  cc-settings.h  cc-shot.h  cc-wifi.h  compositor-backend.h  notification-center.h  panel-app-menu.h  panel-builtins.h  panel-context-menu.h  panel-control-center.h  panel-geometry.h  panel-layout.h  panel-notification-center.h  panel-power.h  panel-tray.h  power_profile.h  sni-client.h  venom_kb_indicator.h  window-backend.h  workspaces-widget.h
venom-panel/src/: venom-panel.c
vpanel/: Makefile  vpanel  vpanel-plugin-host  vpanel-settings
vpanel/docs/: PLUGIN_DEVELOPMENT.md
vpanel/include/: plugin-sandbox.h  vpanel-plugin-api.h
(+62 files in other folders)
